# squids_monsters

./: Cargo.toml  memo.txt  rust-toolchain.toml
contracts/squid_core/: Cargo.toml  lib.rs
logics/helpers/: Cargo.toml  lib.rs
logics/helpers/roles/: mod.rs
logics/squid_base/: Cargo.toml  impls.rs  traits.rs
logics/squid_breeding/: Cargo.toml  impls.rs  traits.rs
