[package]
name = "squid_core"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { branch = "v2.3.0-squids", git = "https://github.com/shunsukew/openbrush-contracts", default-features = false, features = ["access_control", "pausable", "psp34", "reentrancy_guard"] }

squid_base = { path = "../../logics/squid_base", default-features = false }
squid_breeding = { path = "../../logics/squid_breeding", default-features = false }
helpers = { path = "../../logics/helpers", default-features = false }

[lib]
name = "squid_core"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "squid_base/std",
    "squid_breeding/std",
    "helpers/std",
]
ink-as-dependency = []
